# dev-utils

./: .gitignore  LICENSE  add-unit  add-unit.hs  clean-build  dev-utils.cabal  move-unit  rename-subdir  run-tests  stack.yaml
DevUtils/: FileSystem.hs  UI.hs  Unit.hs
app/: add-unit.hs  move-unit.hs  rename-subdir.hs  rename-unit.hs  unit-dependents.hs
devUtils/: dirUtils.py  unitUtils.py
dev_utils/: dir_data.py  dir_utils.py  move_unit.py  unit_utils.py  utils.py
resources/projectSchemas/: cpp.json
resources/templates/: CMakeLists.txt  header  namespace  source  test  testFixture  testFixtureClass  testSource  testSourceWithFixture  testWithFixture  testsMain.cpp
scripts/: cpp-build  cpp-clean  cpp-proj  cpp-test  hs-run  py-clean-ext
src/DevUtils/: Console.hs  FileSystem.hs  Source.hs  Template.hs  UI.hs  Unit.hs  Utils.hs
templates/: namespace  templateInclude  test
