name          : dev-utils
version       : 0.1.0.0
synopsis      : General development utilities
description   : General development utilities
homepage      : https://bitbucket.org/jallen720/dev-utils
license       : BSD3
license-file  : LICENSE
author        : Joel Allen
maintainer    : joelallen720@gmail.com
copyright     : 2016 Joel Allen
category      : Development
build-type    : Simple
cabal-version : >= 1.10


library
    default-language : Haskell2010
    hs-source-dirs   : src

    exposed-modules  : DevUtils.UI
                     , DevUtils.Unit
                     , DevUtils.Utils
                     , DevUtils.FileSystem
                     , DevUtils.Source

    build-depends    : base >= 4.7 && < 5
                     , directory
                     , split
                     , extra
                     , MissingH
                     , strict


executable add-unit
    default-language : Haskell2010
    hs-source-dirs   : app
    main-is          : add-unit.hs
    ghc-options      : -threaded -rtsopts -with-rtsopts=-N

    build-depends    : base
                     , dev-utils


executable move-unit
    default-language : Haskell2010
    hs-source-dirs   : app
    main-is          : move-unit.hs
    ghc-options      : -threaded -rtsopts -with-rtsopts=-N

    build-depends    : base
                     , dev-utils
                     , MissingH


executable rename-subdir
    default-language : Haskell2010
    hs-source-dirs   : app
    main-is          : rename-subdir.hs
    ghc-options      : -threaded -rtsopts -with-rtsopts=-N

    build-depends    : base
                     , dev-utils
                     , directory
                     , MissingH


test-suite dev-utils-test
    default-language : Haskell2010
    hs-source-dirs   : tests
    main-is          : Spec.hs
    ghc-options      : -threaded -rtsopts -with-rtsopts=-N
    type             : exitcode-stdio-1.0

    build-depends    : base
                     , dev-utils


source-repository head
    type     : git
    location : https://bitbucket.org/jallen720/dev-utils
